fixup! [MIG] web_responsive: Migrate to v10
Scroll control panel with page using CSS instead of jQuery.

jQuery scrolling caused scrollbar malfunction.

--- a/web_responsive/static/src/less/main.less
+++ b/web_responsive/static/src/less/main.less
@@ -25,3 +25,15 @@ main {
 div.oe_footer {
     display: none;
 }
+
+.o_web_client {
+    >.o_main {
+        overflow: auto;
+        > .o_main_content {
+            overflow: initial;
+            > .o_content {
+                overflow: initial;
+            }
+        }
+    }
+}
